--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1 span {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%;
+	
 }
 h1{
 	text-align: center;
@@ -34,5 +34,11 @@ p{
 }
 button{
 	background-color: #f16059;
-	font-weight: 500;
+	font-weight: bolder;
+	margin-left: 152px;
+}
+label{
+	margin-left: 130px;
+	font-weight: bolder;
+	margin-left: 170px;
 }
